--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
 
     <section id="schoolname">
-        <img src="" class="profile img-circle">
+        <img src="https://3.files.edl.io/8327/17/09/21/111046-da62f2c3-f48b-4242-ba6a-fb0314b08cc4.jpg" class="profile img-circle">
         <h1>Parras Middle School
             <br>
         </h1>
@@ -217,4 +217,6 @@
         </div>
     </section>
 
-</body></html>
+</body>
+
+</html>
